# ECE30861_HW1

./: INTEGRATION_EXAMPLE.md  README.md  TASK_5_1_COMPLETE.md  TASK_5_2_COMPLETE.md  TASK_5_3_COMPLETE.md  TASK_5_4_COMPLETE.md  TASK_5_5_COMPLETE.md  TASK_5_COMPLETE.md  demo_task_5_4.py  demo_task_5_5.py  project.toml  pyproject.toml  pytest.ini  quick_test_error_handling.py  quick_test_task33.py  run  test_edge_case_urls.txt  test_error_handling.py  test_error_handling_task53.py  test_exceptions.py  test_file_1.md  test_invalid_urls.txt  test_invalid_urls_comprehensive.txt  test_licenseCheck.py  test_logging.py  test_malformed_urls.txt  test_non_huggingface_urls.txt  test_nonexistent_repos.txt  test_task_5_4_timeout_handling.py  test_task_5_5_invalid_urls.py  test_task_6_1_integration.py  test_valid_urls.txt  verification_results.txt  verify_task_5_2.py  verify_task_5_4.py  verify_task_5_5.py
Claude tests and Summaries/: WEEK_2_3_COMPLETION_REPORT.md  final_test_results.txt  logging_test_results.txt  post_fix_check.txt  quick_test.py  setup_fix.sh  simple_test_check.py  test_counter.py  test_minimal.py  verify_logging.py
bs/: run  test_dataset_code_metric.py  test_dataset_code_metric_task33.py  test_metrics_working.py  test_urls_task_6_1.txt
src/: config.py  init.py  models.py
test/: LOGGING_USAGE.md  comprehensive_logging_test.py  conftest.py  final_logging_demo.py  simple_logging_test.py  tb_codeCheck.py  test_bus_factor.py  test_cli.py  test_dataset_code_score.py  test_dataset_qual.py  test_license_check.py  test_logging.py  test_metrics.py  test_orchestrator.py  (+3 more)
(+67 files in other folders)
